--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "swr": "^2.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.5.0",
-    "tailwindcss": "^4.0.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+  "typescript": "^5.0.0",
+  "@types/react": "^18.0.0",
+  "@types/node": "^20.0.0"
+}
+
   }
 }
