--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "swr": "^2.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/react": "^18.0.0",
-    "@types/node": "^20.0.0"
-  }
+  "typescript": "^5.0.0",
+  "@types/react": "^18.0.0",
+  "@types/node": "^20.0.0",
+  "tailwindcss": "^3.4.0",
+  "postcss": "^8.4.31",
+  "autoprefixer": "^10.4.16"
+}
+
 }
